--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 script:
  - docker run harimadala/docker-react npm run test -- --coverage
- 
+
 deploy:
  provider: elasticbeanstalk
  region: "us-east-2"
@@ -23,6 +23,4 @@ deploy:
   branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
-   secure: "$AWS_SECRET_KEY"
- 
-
+   secure: $AWS_SECRET_KEY
