--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
  - docker build -t harimadala/docker-react -f Dockerfile.dev .
 
 script:
- - docker run harimadala/docker-react npm run test -- --coverage
+ - docker run -e CI=true harimadala/docker-react npm run test
 
 deploy:
  provider: elasticbeanstalk
@@ -24,4 +24,4 @@ deploy:
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
    secure: $AWS_SECRET_KEY
-   
+  
